# eBackUp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
engine_cpp/: .gitignore  CMakeLists.txt  README.md
engine_cpp/bench/baselines/: ci_floor.json  ci_floor_measure.json  ci_floor_probe_l567.json  ci_floor_profile.json  ci_floor_stage32.json  ci_floor_topo_only.json  ci_floor_topochain_only.json  ci_floor_topoph_only.json  ci_floor_topophn_only.json
engine_cpp/bench/scripts/: run_gtcdc_proof.ps1  run_gtcdc_v6_eval.ps1  run_topo_proof.ps1  run_topochain_cuda_prod.ps1  run_topochain_proof.ps1  run_topoph_proof.ps1  run_topophn_cuda_prod.ps1  run_topophn_cuda_warm.ps1  run_topophn_proof.ps1
engine_cpp/cli/: eb_main.cc  eb_service.h  eb_service_win.cc  ebrecover_main.cc
engine_cpp/cmake/: BuildSQLite.cmake  FetchLZ4.cmake  FetchZSTD.cmake  SetupGTest.cmake
engine_cpp/config/: queue_drain.example.json  sync_drain.example.json  sync_ferry.example.json  sync_local_mirror.example.json  sync_pds.example.json
engine_cpp/deploy/: ebbackup.service  ebbackup.timer
engine_cpp/docs/: PERF_BASELINE.md  README.md  VERSION_HISTORY.md
engine_cpp/include/ebbackup/: eb_backup.h  ebbackup_workbench.h
engine_cpp/scripts/: install_service.ps1  package_ebrecover_portable.ps1
engine_cpp/src/archive/: eb_bundle.cc
engine_cpp/src/audit/: carl_anchor.cc  merkle.cc  merkle_proof.cc  rar_chain.cc  rar_sign.cc
engine_cpp/src/catalog/: job_report.cc  manifest_browse_index.cc  manifest_diff.cc  path_index.cc  restore_acceptance.cc  snapshot_meta.cc  snapshot_reachability.cc
engine_cpp/src/chunk/: cfi_bloom.cc  cfi_rolling.cc  chunk_profile.cc  eb_hcrbo.cc  eb_hcrbo_gt.cc  fast_cdc.cc  fast_cdc_simd.cc  fast_cdc_streaming.cc  gt_cdc.cc  gt_cdc_gear.cc  gt_cdc_gear_scan.cc  gt_cdc_streaming.cc  gt_cdc_tensor.cc  rabin_anchor.cc  rolling_checksum.cc
engine_cpp/src/codec/: compress_policy.cc  content_class.cc  lz4_codec.cc  zstd_codec.cc  zstd_dict.cc
engine_cpp/src/common/: digest.cc  digest_legacy.cc  digest_pool.cc  digest_sha_ni.cc  digest_standard.cc  fsync.cc  hook_runner.cc  path_encoding.cc  status.cc
engine_cpp/src/crypto/: aes_block.cc  aes_gcm.cc  envelope.cc  gcm_portable.cc
engine_cpp/src/daemon/: backup_daemon.cc
engine_cpp/src/engine/: backup_engine.cc  eb_backup_capi.cc  manifest.cc  restore_engine.cc  restore_options_json.cc  restore_path_remap.cc  restore_plan.cc
engine_cpp/src/io/: file_meta.cc  fs_watch.cc  mmap_reader.cc
engine_cpp/src/job/: backup_window.cc  job_config.cc
engine_cpp/src/pipeline/: backup_pipeline.cc  file_scheduler.cc
engine_cpp/src/plugin/: plugin_registry.cc  registry_hive_plugin.cc  sqlite_checkpoint_plugin.cc  vhdx_scan_plugin.cc
engine_cpp/src/queue/: job_queue.cc
engine_cpp/src/report/: backup_report.cc  rpo_summary.cc
engine_cpp/src/restore/: in_place_restore.cc
engine_cpp/src/scan/: backup_filter.cc  exclude_suggestions.cc  filter_loader.cc  scan_entry.cc  scan_hint_options.cc
engine_cpp/src/state/: superblock.cc  sync_executor.cc
engine_cpp/src/store/: chunk_compactor.cc  chunk_index.cc  chunk_store.cc  eb_pack.cc  eb_pack_compactor.cc  maintenance_wizard.cc  orphan_explain.cc  orphan_gc.cc  repo_stats.cc  retention_policy.cc  snapshot_store.cc
engine_cpp/src/winmeta/: efs_key.cc  sparse_file.cc  vss_path_map.cc  vss_session.cc  vss_session_stub.cc  vss_shadow_storage.cc  vss_volume_closure.cc  win_meta.cc
engine_cpp/tests/archive/: eb_bundle_delta_test.cc  eb_bundle_test.cc
engine_cpp/tests/audit/: carl_anchor_test.cc  merkle_proof_test.cc  merkle_test.cc  ops_audit_test.cc  rar_chain_test.cc
engine_cpp/tests/bench/: backup_pipeline_bench.cc  bench_check.cc  bench_reuse_gate_test.cc  chunk_bench.cc  gt_cdc_scan_bench.cc  gt_cdc_v6_eval.cc  topo_cdc_eval.cc
engine_cpp/tests/catalog/: manifest_browse_index_test.cc  manifest_diff_test.cc  path_index_test.cc  snapshot_reachability_test.cc
engine_cpp/tests/chunk/: chunk_profile_test.cc  digest_pool_test.cc  digest_sha_ni_test.cc  fast_cdc_bounds_test.cc  fast_cdc_streaming_test.cc  fast_cdc_test.cc  gt_cdc_2f_test.cc  gt_cdc_an_test.cc  gt_cdc_compose_test.cc  gt_cdc_drift_test.cc  gt_cdc_nc_test.cc  gt_cdc_parity_test.cc  gt_cdc_test.cc  topo_cdc_chain_test.cc  topo_cdc_hom_test.cc  topo_cdc_tri_test.cc  topo_gear_parity_test.cc  topo_ph_test.cc  topo_phn_test.cc
engine_cpp/tests/cli/: plugin_cli_test.cc  queue_cli_test.cc  restore_cli_test.cc  service_cli_test.cc  suggest_excludes_cli_test.cc
engine_cpp/tests/codec/: compress_policy_test.cc  content_class_test.cc  lz4_codec_test.cc  zstd_codec_test.cc  zstd_dict_test.cc
engine_cpp/tests/crypto/: aes_gcm_nist_test.cc  aes_gcm_portable_test.cc  digest_legacy_test.cc  digest_standard_test.cc  envelope_test.cc  pbkdf2_test.cc
engine_cpp/tests/daemon/: daemon_stop_test.cc  schedule_hooks_test.cc  schedule_json_test.cc  schedule_smoke_test.cc  schedule_snapshot_test.cc  watch_smoke_test.cc
engine_cpp/tests/engine/: backup_engine_test.cc  backup_report_integration_test.cc  coalesced_meta_test.cc  composite_workflow_test.cc  digest_dual_test.cc  e2e_failure_test.cc  e2e_success_test.cc  eb_backup_capi_test.cc  eb_hcrbo_gt_test.cc  eb_hcrbo_test.cc  manifest_index_integration_test.cc  manifest_test.cc  manifest_v4_test.cc  manifest_v5_test.cc  media_fixture_test.cc  nested_tree_test.cc  path_normalize_test.cc  progress_test.cc  real_fixture_test.cc  recovery_test.cc  restore_encrypt_test.cc  restore_meta_test.cc  restore_path_remap_test.cc  restore_streaming_test.cc  restore_test.cc  selective_restore_test.cc  snapshot_gc_test.cc  (+4 more)
engine_cpp/tools/: run_tests_capi.c
engine_cpp/workbench/: ebbackup_workbench.def  ebbackup_workbench_shim.cc
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
sync_cpp/: CMakeLists.txt  README.md
sync_cpp/cli/: eb_sync_main.cc
sync_cpp/src/: backoff.cc  ebb_reader.cc  sync_agent.cc  sync_outbox.cc  sync_state.cc
sync_cpp/tests/: backoff_test.cc  ebb_reader_test.cc  ferry_roundtrip_test.cc  local_push_roundtrip_test.cc  sync_state_test.cc  transport_test.cc
(+589 files in other folders)
