[package]
name = "ebbackup-workbench"
version = "0.1.0"
description = "ebbackup desktop workbench (Tauri + Vue)"
edition = "2021"

[lib]
name = "ebbackup_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
once_cell = "1"
parking_lot = "0.12"
